--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -72,6 +72,13 @@ services:
   #     - STOCK_API_HOST=stock-predictions-api
   #     - STOCK_API_PORT=80
 
+  qdrant:
+    image: qdrant/qdrant
+    container_name: qdrant
+    hostname: qdrant
+    ports:
+      - 6333:6333 
+
   solr:
     image: solr:latest
     container_name: solr
