Diversas mudanças e inicio da documentação

--- a/decision-app/.env
+++ b/decision-app/.env
@@ -2,5 +2,5 @@ DB_USER="decision"
 DB_NAME="decision"
 DB_PASSWORD="1234"
 DB_HOST="localhost"
-#RECOMMENDATION_API_HOST="recommendation-api"
-#RECOMMENDATION_API_PORT="80"
+SIMILARITY_API_HOST="localhost"
+SIMILARITY_API_PORT="8000"
