--- a/similarity_api/Dockerfile
+++ b/similarity_api/Dockerfile
@@ -5,6 +5,7 @@ WORKDIR /opt/similarity-api
 COPY ./requirements.txt ./requirements.txt
 RUN pip install --no-cache-dir --upgrade -r requirements.txt
 
+COPY ./secrets ./secrets
 COPY ./main.py ./main.py
 COPY ./services ./services
 COPY ./configuration ./configuration
